# wake-on-mcu

./: .gitignore  LICENSE
agent/: Cargo.toml  linux.sh  win.bat  womagent.service
agent/src/: main.rs
mcu/: config.py  config2.py  consts.py  main.py  monitor.py  net_utils.py  server.py  utils.py  websocket.py  worker.py
server/: package-lock.json  package.json  tsconfig.json
server/data/: config.yml
server/src/: app.ts  client-server.ts  config.ts  http.ts  log.ts  token.ts  web-server.ts  websocket.ts
server/src/service/: day.ts  db.ts  device.ts  index.ts
web/: package-lock.json  package.json
web/src/: App.tsx  Device.css  Devices.tsx  TokenKey.tsx  http.ts
