[package]
name = "womagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["net", "rt", "sync", "macros", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6.0"
